--- a/_includes/mermaid.html
+++ b/_includes/mermaid.html
@@ -1,15 +1,16 @@
-{%- if content contains 'mermaid' -%}
+{% if page.mermaid == true %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.0.0/mermaid.min.js"></script>
 <script>
-const config = {
+var config = {
     startOnLoad:true,
     theme: 'forest',
-    flowchart: {
-        useMaxWidth:false,
-        htmlLabels:true
+    flowchart:{
+            useMaxWidth:false,
+            htmlLabels:true
         }
 };
 mermaid.initialize(config);
 window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
 </script>
 {% endif %}
+
