feat(新增访问统计):

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,6 +45,7 @@
   {% include gtm_head.html %}
   {% include google_analytics.html %}
   {% include cloudflare_analytics.html %}
+  {% include baidu-analytics.html %}
 
   {% if layout.common-ext-css %}
     {% for css in layout.common-ext-css %}
