--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,40 +3,65 @@ layout: base
 ---
 
 {% include header.html type="post" %}
+{% include busuanzi.html %}
+
 
 <div class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}">
   <div class="row">
     <div class="{% if page.full-width %} col {% else %} col-xl-10 offset-xl-1 col-lg-8 offset-lg-1 {% endif %}">
+      <br>
+      <span id="busuanzi_container_page_pv">
+        <div class="padding border border-sub border-dotted fadein-left">
+          本文总阅读量<span id="busuanzi_value_page_pv"></span>次
+        </div>
+      </span>
+
+      <!--span id="busuanzi_container_site_pv">
+        <div class="padding border border-sub border-dotted fadein-left">
+          本站总访问量<span id="busuanzi_value_site_pv"></span>次
+        </div>
+      </span>
+
+      <span id="busuanzi_container_site_uv">
+        <div class="padding border border-sub border-dotted fadein-left">
+          本站总访客数<span id="busuanzi_value_site_uv"></span>人
+        </div>
+      </span-->
+      <br>
 
       {% if page.gh-repo %}
-        {% assign gh_split =  page.gh-repo | split:'/'  %}
-        {% assign gh_user =  gh_split[0]  %}
-        {% assign gh_repo =  gh_split[1]  %}
+      {% assign gh_split = page.gh-repo | split:'/' %}
+      {% assign gh_user = gh_split[0] %}
+      {% assign gh_repo = gh_split[1] %}
 
-        <div id="header-gh-btns">
-          {% if page.gh-badge.size > 0 %}
-            {% for badge in page.gh-badge %}
-              {% case badge %}
-                {% when 'star'%}
-                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=star&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
-                {% when 'watch'%}
-                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=watch&v=2&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
-                {% when 'fork'%}
-                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=fork&count=true" frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
-                {% when 'follow'%}
-                  <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&type=follow&count=true" frameborder="0" scrolling="0" width="220px" height="20px"></iframe>
-              {% endcase %}
-            {% endfor %}
-          {% endif %}
-        </div>
+      <div id="header-gh-btns">
+        {% if page.gh-badge.size > 0 %}
+        {% for badge in page.gh-badge %}
+        {% case badge %}
+        {% when 'star'%}
+        <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=star&count=true"
+          frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
+        {% when 'watch'%}
+        <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=watch&v=2&count=true"
+          frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
+        {% when 'fork'%}
+        <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&repo={{ gh_repo }}&type=fork&count=true"
+          frameborder="0" scrolling="0" width="120px" height="20px"></iframe>
+        {% when 'follow'%}
+        <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&type=follow&count=true" frameborder="0"
+          scrolling="0" width="220px" height="20px"></iframe>
+        {% endcase %}
+        {% endfor %}
+        {% endif %}
+      </div>
       {% endif %}
 
       {% if page.before-content %}
-        <div class="before-content">
-          {% for file in page.before-content %}
-            {% include {{ file }} %}
-          {% endfor %}
-        </div>
+      <div class="before-content">
+        {% for file in page.before-content %}
+        {% include {{ file }} %}
+        {% endfor %}
+      </div>
       {% endif %}
 
       <article role="main" class="blog-post">
@@ -45,35 +70,37 @@ layout: base
       </article>
 
       {% if page.tags.size > 0 %}
-        <div class="blog-tags">
-          <span>Tags:</span>
-          {% for tag in page.tags %}
-            <a href="{{ '/tags' | relative_url }}#{{- tag -}}">{{- tag -}}</a>
-          {% endfor %}
-        </div>
+      <div class="blog-tags">
+        <span>Tags:</span>
+        {% for tag in page.tags %}
+        <a href="{{ '/tags' | relative_url }}#{{- tag -}}">{{- tag -}}</a>
+        {% endfor %}
+      </div>
       {% endif %}
 
       {% if page.after-content %}
-        <div class="after-content">
-          {% for file in page.after-content %}
-            {% include {{ file }} %}
-          {% endfor %}
-        </div>
+      <div class="after-content">
+        {% for file in page.after-content %}
+        {% include {{ file }} %}
+        {% endfor %}
+      </div>
       {% endif %}
 
       {% if page.social-share %}
-        {% include social-share.html %}
+      {% include social-share.html %}
       {% endif %}
 
       <ul class="pagination blog-pager">
         {% if page.previous.url %}
         <li class="page-item previous">
-          <a class="page-link" href="{{ page.previous.url | relative_url }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">&larr; Previous Post</a>
+          <a class="page-link" href="{{ page.previous.url | relative_url }}" data-toggle="tooltip" data-placement="top"
+            title="{{page.previous.title}}">&larr; Previous Post</a>
         </li>
         {% endif %}
         {% if page.next.url %}
         <li class="page-item next">
-          <a class="page-link" href="{{ page.next.url | relative_url }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Next Post &rarr;</a>
+          <a class="page-link" href="{{ page.next.url | relative_url }}" data-toggle="tooltip" data-placement="top"
+            title="{{page.next.title}}">Next Post &rarr;</a>
         </li>
         {% endif %}
       </ul>
